--- a/Desafio Formulário - Prof Naisa/design.css
+++ b/Desafio Formulário - Prof Naisa/design.css
@@ -13,15 +13,22 @@
 #Logo{
     display: flex;
     justify-content: center;
-    height: 100px;
+    height: 85px;
+
 }
 
 body{
     background-color: rgb(245, 248, 255);
+    text-align: center;
 }
 
 fieldset{
     border-radius: 10px;
+    text-align: center;
+    width: 50px;
+    height: auto;
+    margin: auto;
+    background-color:rgb(227, 221, 196)
 }
 
 textarea{
