--- a/Desafio Formulário - Prof Naisa/design.css
+++ b/Desafio Formulário - Prof Naisa/design.css
@@ -1,14 +1,15 @@
 #Cabeçalho{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: lawngreen;
+    color: rgb(252, 139, 0);
     text-align: center;
 }
 
 #Rodapé{
-    background-color: rgb(110, 238, 234);
+    background-color: rgb(0, 0, 0);
     height: 40px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(252, 139, 0);
 }
 #Logo{
     display: flex;
@@ -18,7 +19,7 @@
 }
 
 body{
-    background-color: rgb(245, 248, 255);
+    background-color: rgb(3, 249, 126);
     text-align: center;
 }
 
@@ -38,8 +39,22 @@ textarea{
 
 input{
     background-color: rgb(209, 228, 243);
+    border-radius: 60px;
 }
 
 select{
     background-color: rgb(209, 228, 243);
+    border-radius: 50px;
+}
+
+legend{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    text-shadow: 50px;
+}
+
+#Titulo{
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgba(255, 187, 0, 0.637);
 }
